--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ h1 {
 
 section {
   display: flex;
+  margin-bottom: 100px;
 }
 
 #half {
@@ -24,7 +25,8 @@ section {
   width: 100%;
   border-radius: 200%;
   border: 5px solid rgba(0, 0, 255, 0);
-  outline: 5px solid rgb(224, 223, 223);
+  outline: 5px solid rgb(156, 156, 156);
+  margin-top: 20px;
 }
 
 #hire-btn {
@@ -40,4 +42,16 @@ section {
   background-image: url(https://pixy.org/download/891117/);
   background-repeat: no-repeat;
   background-size: 70px;
+}
+
+#sec-two {
+  background-image: url(https://c.neh.tw/thumb/f/720/comrawpixel2282606.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 3% 0;
+}
+
+#second-para {
+  background-color: #dadada8e;
+  padding: 2%;
 }
