--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ section {
 }
 
 #half img {
-  width: 100%;
+  width: 70%;
   border-radius: 200%;
   border: 5px solid rgba(0, 0, 255, 0);
   outline: 5px solid rgb(156, 156, 156);
@@ -65,11 +65,19 @@ section {
   box-shadow: 5px 5px 30px gray;
   margin: 15px;
   border-top-left-radius: 25px;
-  border-left: 5px solid orange;
+  border-left: 8px solid #ff7b00;
+}
+
+.shadow p {
+  margin-bottom: 50px;
 }
 
 #sec-three {
   background-image: url(https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQpyBEC-afOzZRpfqsoRolE-I5MfzBNOiccFItpEqOnDLRerU6i);
   background-repeat: no-repeat;
   background-position: right -100px bottom 30px;
+}
+
+footer {
+  text-align: center;
 }
