--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
-  font-family: "Montserrat", sans-serif;
   margin: 0;
+  font-family: "Montserrat", sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 h1 {
@@ -31,6 +32,7 @@ section {
   border: 5px solid rgba(0, 0, 255, 0);
   outline: 5px solid rgb(156, 156, 156);
   margin-top: 20px;
+  vertical-align: auto;
 }
 
 #hire-btn {
@@ -79,5 +81,8 @@ section {
 }
 
 footer {
+  background-color: #000;
+  color: #fff;
   text-align: center;
+  padding: 10px;
 }
