--- a/style.css
+++ b/style.css
@@ -86,3 +86,12 @@ footer {
   text-align: center;
   padding: 10px;
 }
+
+@media (max-width: 800px) {
+  section {
+    flex-direction: column;
+  }
+  #half {
+    width: 90%;
+  }
+}
